Add signup flow, dashboard, and API

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                     <li><a href="#pricing">Pricing</a></li>
                     <li><a href="#how-it-works">How It Works</a></li>
                 </ul>
-                <a href="#" class="cta-btn">Get Started</a>
+                <a href="/signup" class="cta-btn">Get Started</a>
             </nav>
         </div>
     </header>
